# machine_learning_foundations_1

./: README.md  pyproject.toml  requirements.txt
L2_ML_introduction/: L1_Ex_N2_Example_Notebook_Machine_Learning_Semantic_Spaces.ipynb
L5_evaluation/: L5S1N1_Unsupervised_Models_Evaluation.ipynb
L5_evaluation/data/: custom-evaluation.txt  swiss-SMS_150_10_min_15.model
L6_DatasetCuration/: L6S1N1_Pandas_CSV.ipynb  L6S1N2_Data_Loading_Exercise.ipynb  L6S1N3_SelectingData.ipynb  L6S2N2_Inter-Annotator-Agreement-Calculations.ipynb  L6S3N1_Window-Functions_Aggregation_Pandas.ipynb  L6S4N1_MachineLearningWorkflowRevisited.ipynb
L7_optimise_me/: L7S1N3_MachineLearningVectorisationOptimisation.ipynb  L7S2N1_Optimise_Me.ipynb  L7S2N2_Deploy_Time.ipynb
fundamentals/: L3S1N1_Machine_Learning_Workflow_Iris.ipynb  L3S1N3_Machine_Learning_Workflow_Digits.ipynb
introduction/: L1_Ex_N1_IntroToJupyterNotebooks.ipynb  L1_Ex_N2_Example_Notebook_Machine_Learning_Semantic_Spaces.ipynb
